--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <p>Login</p>
             </div>
             <div>
-                <img src="" alt="">
+                <h1>
+                    <a href="#"><img src="" alt="">Wasabio</a>
+                </h1>
             </div>
             <ul>
                 <li>Início</li>
@@ -40,14 +42,14 @@
 
         <section>
             <div>
-                <h2>Faça sua</h2>
+                <h3>Faça sua</h3>
                 <h1>Reserva</h1>
                 <p>Realize sua reserva online e garanta seu lugar com segurança</p>
                 <button><a href="">Reserve Aqui</a></button>
             </div>
 
             <div>
-                <h2>Peça nosso</h2>
+                <h3>Peça nosso</h3>
                 <h1>Delivery</h1>
                 <p>Peça uma de nossas 3 melhores barcas de variadas peças</p>
                 <button><a href="">Peça Aqui</a></button>
@@ -56,7 +58,7 @@
 
         <section>
             <div>
-                <h2>Confira nosso</h2>
+                <h3>Confira nosso</h3>
                 <h1>Cardápio</h1>
                 <p>Explore o nosso cardápio repleto de autenticidade e sabor. Descubra uma variedade incrível de pratos típicos, bebidas refrescantes e sobremesas deliciosas</p>
                 <button><a href="">Confira Aqui</a></button>
@@ -65,7 +67,7 @@
 
         <section>
             <div>
-                <h2>Encontre</h2>
+                <h3>Encontre</h3>
                 <h1>Unidades</h1>
                 <select name="unidades" id="">
                     <option value="aguas-claras">Águas Claras</option>
@@ -87,7 +89,7 @@
                 </div>
 
                 <div>
-                    <h2>CONTATOS</h2>
+                    <h3>CONTATOS</h3>
                     <ul>
                         <li>(61) 99999-9999</li>
                         <li>(61) 3333-3333</li>
@@ -95,13 +97,13 @@
                 </div>
 
                 <div>
-                    <h2>HORÁRIOS DE FUNCIONAMENTO</h2>
+                    <h3>HORÁRIOS DE FUNCIONAMENTO</h3>
                     <p>Segunda a Sábado – 18h às 23h00</p>
                     <p>Domingo e feriados  – 18h às 22h00</p>
                 </div>
 
                 <div>
-                    <h2>REDES SOCIAIS</h2>
+                    <h3>REDES SOCIAIS</h3>
                     <ul>
                         <li><a href=""></a><img src="" alt=""></li>
                         <li><a href=""></a><img src="" alt=""></li>
