--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 <div>
                     <h3>REDES SOCIAIS</h3>
                     <ul>
-                        <li><a href=""></a><img src="" alt=""></li>
-                        <li><a href=""></a><img src="" alt=""></li>
-                        <li><a href=""></a><img src="" alt=""></li>
-                        <li><a href=""></a><img src="" alt=""></li>
+                        <li><a href="https://www.instagram.com"></a>Insta<img src="" alt=""></li>
+                        <li><a href="https://web.whatsapp.com/"></a>Whats<img src="" alt=""></li>
+                        <li><a href="https://www.tiktok.com/pt-BR/"></a>Tik tok<img src="" alt=""></li>
+                        <li><a href="https://twitter.com/home"></a>Twitter<img src="" alt=""></li>
                     </ul>
                 </div>
             </section>
