--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Estilos -->
     <link rel="stylesheet" href="./src/css/estilo.css">
     <link rel="stylesheet" href="./src/css/reset.css">
+
+    <!-- Fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>Wasabio seafood</title>
 </head>
@@ -16,13 +22,13 @@
     <header>
 
         <nav>
-            <div>
-                <img src="" alt="">
+            <div id="login">
+                <img src="./src/imagens/logo-login.png" alt="">
                 <p>Login</p>
             </div>
             <div>
                 <h1>
-                    <a href="#"><img src="" alt="">Wasabio</a>
+                    <a href="#"><img src="./src/imagens/logo.png" alt=""></a>
                 </h1>
             </div>
             <ul>
@@ -32,27 +38,31 @@
             </ul>
         </nav>
 
-        <div>
-            <img src="" alt="">
+        <div id="imagem-sushi">
+            <!-- Background sushi -->
         </div>
 
     </header>
 
     <main>
 
-        <section>
-            <div>
-                <h3>Faça sua</h3>
-                <h1>Reserva</h1>
-                <p>Realize sua reserva online e garanta seu lugar com segurança</p>
-                <button><a href="">Reserve Aqui</a></button>
+        <section id="principais-opcoes">
+            <div id="reserva">
+                <div class="conteudo">
+                    <h3>Faça sua</h3>
+                    <h1>Reserva</h1>
+                    <p>Realize sua reserva online e garanta seu lugar com segurança</p>
+                    <button><a href="">Reserve Aqui</a></button>
+                </div>
             </div>
 
-            <div>
-                <h3>Peça nosso</h3>
-                <h1>Delivery</h1>
-                <p>Peça uma de nossas 3 melhores barcas de variadas peças</p>
-                <button><a href="">Peça Aqui</a></button>
+            <div id="delivery">
+                <div class="conteudo">
+                    <h3>Peça nosso</h3>
+                    <h1>Delivery</h1>
+                    <p>Peça uma de nossas 3 melhores barcas de variadas peças</p>
+                    <button><a href="">Peça Aqui</a></button>
+                </div>
             </div>
         </section>
 
