--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
                 <div id="redes" class="footer-infos">
                     <h3>REDES SOCIAIS</h3>
                     <ul>
-                        <li><a href="https://www.instagram.com"><img src="./src/imagens/insta.png" alt=""></a></li>
-                        <li><a href="https://web.whatsapp.com/"><img src="./src/imagens/whats.png" alt=""></a></li>
-                        <li><a href="https://www.tiktok.com/pt-BR/"><img src="./src/imagens/tik.png" alt=""></a></li>
-                        <li><a href="https://twitter.com/home"><img src="./src/imagens/twitter.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com" target="_blank"><img src="./src/imagens/insta.png" alt=""></a></li>
+                        <li><a href="https://web.whatsapp.com/" target="_blank"><img src="./src/imagens/whats.png" alt=""></a></li>
+                        <li><a href="https://www.tiktok.com/pt-BR/" target="_blank"><img src="./src/imagens/tik.png" alt=""></a></li>
+                        <li><a href="https://twitter.com/home" target="_blank"><img src="./src/imagens/twitter.png" alt=""></a></li>
                     </ul>
                 </div>
             </section>
 
             <section id="github">
                 <p>Confira informações sobre a criação do site e dos devs no github</p>
-                <a href="#">Github</a>
+                <a href="https://github.com/Luidyenrico" target="_blank">Github</a>
             </section>
 
     </footer>
