--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
 
         <nav>
-            <div id="login"> 
+            <div id="login" onclick="Redireciona_Para_Login()"> 
                     <img src="./src/imagens/logo-login.png" alt="">
                     <p>Login</p>
             </div>
@@ -67,7 +67,7 @@
                     <h3>Peça nosso</h3>
                     <h1>Delivery</h1>
                     <p>Peça uma de nossas 3 melhores barcas de variadas peças</p>
-                    <button><a href="">Peça Aqui</a></button>
+                    <button><a href="https://wa.me/61993213466" target="_blank">Peça Aqui</a></button>
                 </div>
             </div>
         </section>
