--- a/src/pages/cadastro/index.html
+++ b/src/pages/cadastro/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div>
                 <h1>
-                    <a href="#"><img src="./src/imagens/logo.png" alt=""></a>
+                    <a href="../../../index.html"><img src="./src/imagens/logo.png" alt=""></a>
                 </h1>
             </div>
         </nav>
