--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -47,6 +47,7 @@
     <footer>
         <nav> 
             <a href="#">Política de privacidade</a>
+            <span>|</span>
             <a href="#">Termos de uso</a>
         </nav>
 
