--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>Faça sua</h3>
                     <h1>Reserva</h1>
                     <p>Realize sua reserva online e garanta seu lugar com segurança</p>
-                    <button><a href="">Reserve Aqui</a></button>
+                    <button><a href="https://wa.me/61993213466" target="blank">Reserve Aqui</a></button>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                     <h3>Peça nosso</h3>
                     <h1>Delivery</h1>
                     <p>Peça uma de nossas 3 melhores barcas de variadas peças</p>
-                    <button><a href="https://wa.me/61993213466" target="_blank">Peça Aqui</a></button>
+                    <button><a href="https://wa.me/61993213466" target="blank">Peça Aqui</a></button>
                 </div>
             </div>
         </section>
@@ -80,7 +80,7 @@
                         <p>Explore o nosso cardápio repleto de autenticidade e sabor. Descubra uma variedade incrível de pratos típicos, bebidas refrescantes e sobremesas deliciosas</p>
                     </div>
                     <div>
-                        <button id="botao-cardapio"><a href="">Confira Aqui</a></button>
+                        <button id="botao-cardapio"><a href="./src/imagens/cardapio.png" target="_blank">Confira Aqui</a></button>
                     </div>
                 </div>
                 
