Criação de uma banco de dados no estilo txt, com a autenticação do usuário

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul>
                 <li>Início</li>
                 <li>Menu</li>
-                <li>Sobre</li>
+                <li onclick="baixarDados()">Sobre</li>
             </ul>
         </nav>
 
@@ -142,10 +142,8 @@
             </section>
 
     </footer>
-
-
-
+    
     <script src="./src/js/main.js"></script>
+    <script src="/src/js/cadastro.js"></script>
 </body>
-
 </html>
