--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
     </footer>
     
     <script src="./src/js/main.js"></script>
-    <script src="/src/js/cadastro.js"></script>
+    <script src="./src/pages/cadastro/src/js/cadastro.js"></script>
 </body>
 </html>
