--- a/src/pages/cadastro/index.html
+++ b/src/pages/cadastro/index.html
@@ -56,6 +56,6 @@
         </div>
     </footer>
 
-<script src="/src/js/cadastro.js"></script>
+<script src="./src/js/cadastro.js"></script>
 </body>
 </html>
