--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -56,6 +56,6 @@
         </div>
     </footer>
 
-    <script src="/src/js/login.js"></script>
+    <script src="./src/js/login.js"></script>
 </body>
 </html>
