--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul>
                 <li>Início</li>
                 <li>Menu</li>
-                <li onclick="baixarDados()">Sobre</li>
+                <li onclick="baixarDados()">Data</li>
             </ul>
         </nav>
 
