--- a/src/pages/cadastro/index.html
+++ b/src/pages/cadastro/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <p>Já tem uma conta? <a href="../login/index.html">Faça o login</a></p>
             </section>
-            <button type="button" onclick="salvarCadastro()">CADASTRAR</button>
+            <button type="submit" onclick="salvarCadastro()">CADASTRAR</button>
         </form>
     </main>
 
