--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -40,7 +40,7 @@
                 <p>Não tem conta? <a href="../cadastro/index.html">Faça o cadastro</a></p>
             </section>
 
-            <button type="button" onclick="realizarLogin()">ENTRAR</button>
+            <button type="submit" onclick="realizarLogin()">ENTRAR</button>
         </form>
     </main>
 
