change in buttons

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div>
                 <h1>
-                    <a href="#"><img src="./src/imagens/logo.png" alt=""></a>
+                    <img src="./src/imagens/logo.png" alt="">
                 </h1>
             </div>
             <ul>
@@ -81,7 +81,7 @@
                         <p>Explore o nosso cardápio repleto de autenticidade e sabor. Descubra uma variedade incrível de pratos típicos, bebidas refrescantes e sobremesas deliciosas</p>
                     </div>
                     <div>
-                        <a href="./src/imagens/cardapio.png" target="_blank"><button id="botao-cardapio">Confira Aqui</a></button>
+                        <a href="./src/imagens/cardapio.png" target="_blank"><button id="botao-cardapio">Confira Aqui</button></a>
                     </div>
                 </div>
                 
