--- a/src/pages/sobre/index.html
+++ b/src/pages/sobre/index.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <h1>
-                    <a href="#"><img src="./src/imagens/logo.png" alt=""></a>
+                    <img src="./src/imagens/logo.png" alt="">
                 </h1>
             </div>
             <ul>
