--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>Faça sua</h3>
                     <h1>Reserva</h1>
                     <p>Realize sua reserva online e garanta seu lugar com segurança</p>
-                    <a href="https://wa.me/61993213466" target="blank"><button>Reserve aqui</button></a>
+                    <a href="https://wa.me/61993213466" target="blank"><button id="botao-reserva">Reserve aqui</button></a>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                     <h3>Peça nosso</h3>
                     <h1>Delivery</h1>
                     <p>Peça uma de nossas 3 melhores barcas de variadas peças</p>
-                    <a href="https://wa.me/61993213466" target="blank"><button>Peça aqui</button></a>
+                    <a href="https://wa.me/61993213466" target="blank"><button id="botao-pedir">Peça aqui</button></a>
                     
                 </div>
             </div>
