--- a/src/pages/cadastro/index.html
+++ b/src/pages/cadastro/index.html
@@ -38,9 +38,9 @@
                     <input type="tel" name="telefone" class="inputs-cadastro" id="cadastro-telefone" placeholder="Telefone" required>
                     <input type="password" name="senha" class="inputs-cadastro" id="cadastro-senha" placeholder="Senha" required>
                 </div>
-                <p>Já tem uma conta? <a href="../login/index.html">Faça o login</a></p>
+                <p>Já tem uma conta? <a href="../login/index.html" id="botao-faca-login">Faça o login</a></p>
             </section>
-            <button type="submit" onclick="salvarCadastro()">CADASTRAR</button>
+            <button type="submit" onclick="salvarCadastro()" id="botao-cadastrar">CADASTRAR</button>
         </form>
     </main>
 
