--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -37,10 +37,10 @@
                     <input type="password" name="senha" id="login-senha" class="inputs-login" placeholder="Senha" required>
                 </div>
 
-                <p>Não tem conta? <a href="../cadastro/index.html">Faça o cadastro</a></p>
+                <p>Não tem conta? <a href="../cadastro/index.html" id="botao-faca-cadastro">Faça o cadastro</a></p>
             </section>
 
-            <button type="submit" onclick="realizarLogin()">ENTRAR</button>
+            <button type="submit" onclick="realizarLogin()" id="botao-entrar">ENTRAR</button>
         </form>
     </main>
 
