--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <ul>
                 <a href="#"><li>Início</li></a>
-                <a href="./src/pages/sobre/index.html"><li>Sobre</li></a>
+                <a href="./src/pages/sobre/index.html"><li id="sobre-nos">Sobre</li></a>
                 <li onclick="baixarDados()">Data</li>
             </ul>
         </nav>
@@ -129,17 +129,17 @@
                 <div id="redes" class="footer-infos">
                     <h3>REDES SOCIAIS</h3>
                     <ul>
-                        <li><a href="https://www.instagram.com" target="_blank"><img src="./src/imagens/insta.png" alt=""></a></li>
-                        <li><a href="https://web.whatsapp.com/" target="_blank"><img src="./src/imagens/whats.png" alt=""></a></li>
-                        <li><a href="https://www.tiktok.com/pt-BR/" target="_blank"><img src="./src/imagens/tik.png" alt=""></a></li>
-                        <li><a href="https://twitter.com/home" target="_blank"><img src="./src/imagens/twitter.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com" target="_blank"><img src="./src/imagens/insta.png" alt="instagram"></a></li>
+                        <li><a href="https://web.whatsapp.com/" target="_blank"><img src="./src/imagens/whats.png" alt="whatsapp"></a></li>
+                        <li><a href="https://www.tiktok.com/pt-BR/" target="_blank"><img src="./src/imagens/tik.png" alt="tiktok"></a></li>
+                        <li><a href="https://twitter.com/home" target="_blank"><img src="./src/imagens/twitter.png" alt="twitter"></a></li>
                     </ul>
                 </div>
             </section>
 
             <section id="github">
                 <p>Confira informações sobre a criação do site e dos devs no github</p>
-                <a href="https://github.com/Luidyenrico" target="_blank">Github</a>
+                <a href="https://github.com/Luidyenrico" target="_blank" id="github">Github</a>
             </section>
 
     </footer>
