--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
         <nav>
             <div id="login" onclick="Redireciona_Para_Login()"> 
-                    <img src="./src/imagens/logo-login.png" alt="">
+                    <img src="./src/imagens/logo-login.png" alt="logologin">
                     <p>Login</p>
             </div>
             <div>
                 <h1>
-                    <img src="./src/imagens/logo.png" alt="">
+                    <img src="./src/imagens/logo.png" alt="logo">
                 </h1>
             </div>
             <ul>
@@ -92,7 +92,7 @@
                     <div>
                         <h3>Encontre</h3>
                         <h1>Unidades</h1>
-                        <select name="unidades" id="">
+                        <select name="unidades" id="selecao-unidades">
                             <option value="aguas-claras">Águas Claras</option>
                             <option value="taguatinga">Taguatinga</option>
                             <option value="samambaia">Samambaia</option>
@@ -109,7 +109,7 @@
 
             <section id="infos" >
                 <div id="logo-footer" class="footer-infos">
-                    <img src="./src/imagens//logo.png" alt="">
+                    <img src="./src/imagens//logo.png" alt="logo">
                 </div>
 
                 <div id="contatos" class="footer-infos">
