--- a/src/pages/sobre/index.html
+++ b/src/pages/sobre/index.html
@@ -15,16 +15,16 @@
 
         <nav>
             <div id="login" onclick="Redireciona_Para_Login()"> 
-                    <img src="./src/imagens/logo-login.png" alt="">
+                    <img src="./src/imagens/logo-login.png" alt="logologin">
                     <p>Login</p>
             </div>
             <div>
                 <h1>
-                    <img src="./src/imagens/logo.png" alt="">
+                    <img src="./src/imagens/logo.png" alt="logo">
                 </h1>
             </div>
             <ul>
-                <a href="../../../index.html"><li>Início</li></a>
+                <a href="../../../index.html"><li id="voltar-inicio">Início</li></a>
                 <a href=""><li>Sobre</li></a>
                 <li onclick="baixarDados()">Data</li>
             </ul>
@@ -67,7 +67,7 @@
 
         <section id="infos" >
             <div id="logo-footer" class="footer-infos">
-                <img src="./src/imagens//logo.png" alt="">
+                <img src="./src/imagens//logo.png" alt="logo">
             </div>
 
             <div id="contatos" class="footer-infos">
